rebuild adapter's logic